--- a/Web Proje/Anasayfa.html
+++ b/Web Proje/Anasayfa.html
@@ -30,7 +30,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup" >
                   <div class="navbar-nav">
                     <a class="nav-link" href="Hakkımda.html">Hakkımda</a>
-                    <a class="nav-link" href="Hakkımda.html">Şehrim</a>
+                    <a class="nav-link" href="Sehrim.html">Şehrim</a>
                     <a class="nav-link" href="#">Özgeçmiş</a>
                     <a class="nav-link" href="">İlgi Alanlarım</a>
                   </div>
