--- a/Web Proje/Sehrim.html
+++ b/Web Proje/Sehrim.html
@@ -15,7 +15,7 @@
 
 <body class="p-3 m-0 border-0 bd-example m-0 border-0" style="background-color: #FFEAE3;">
    
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary ">
         <div class="container-fluid">
             <a class="navbar-brand" href="Anasayfa.html">Zeynep Azap</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,8 +25,8 @@
               <div class="navbar-nav">
                 <a class="nav-link" href="Hakkımda.html">Hakkımda</a>
                 <a class="nav-link" href="Sehrim.html">Şehrim</a>
-                <a class="nav-link" href="Mirasımız.html">Mirasımız</a>
-                <a class="nav-link" href="#">Özgeçmiş</a>
+                <a class="nav-link" href="Mirasimiz.html">Mirasımız</a>
+                <a class="nav-link" href="Ozgecmis.html">Özgeçmiş</a>
                 <a class="nav-link" href="">İlgi Alanlarım</a>
               </div>
             </div>
