--- a/Web Proje/Anasayfa.html
+++ b/Web Proje/Anasayfa.html
@@ -11,13 +11,6 @@
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body class="p-3 m-0 border-0 bd-example m-0 border-0"  style="background-color: #FFEAE3;">
    
@@ -31,9 +24,10 @@
                   <div class="navbar-nav">
                     <a class="nav-link" href="Hakkımda.html">Hakkımda</a>
                     <a class="nav-link" href="Sehrim.html">Şehrim</a>
-                    <a class="nav-link" href="#">Mirasımız</a>
-                    <a class="nav-link" href="#">Özgeçmiş</a>
+                    <a class="nav-link" href="Mirasimiz.html">Mirasımız</a>
+                    <a class="nav-link" href="Ozgecmis.html">Özgeçmiş</a>
                     <a class="nav-link" href="">İlgi Alanlarım</a>
+
                   </div>
                 </div>
               </div>
