--- a/Web Proje/Mirasimiz.html
+++ b/Web Proje/Mirasimiz.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zeynep Azap</title>
-    <link rel="stylesheet" href="Mirasımız.css">
+    <link rel="stylesheet" href="Mirasimiz.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
@@ -25,8 +25,8 @@
               <div class="navbar-nav">
                 <a class="nav-link" href="Hakkımda.html">Hakkımda</a>
                 <a class="nav-link" href="Sehrim.html">Şehrim</a>
-                <a class="nav-link" href="Mirasımız.html">Mirasımız</a>
-                <a class="nav-link" href="#">Özgeçmiş</a>
+                <a class="nav-link" href="Mirasimiz.html">Mirasımız</a>
+                <a class="nav-link" href="Ozgecmis.html">Özgeçmiş</a>
                 <a class="nav-link" href="">İlgi Alanlarım</a>
               </div>
             </div>
@@ -35,6 +35,18 @@
 
     <div> 
         <h1>Tarihi Justinianus Köprüsü</h1>
+
+        <div class="container text-center">
+          <div class="row">
+            <div class="col" style=" background: rgba(76, 175, 80, 0); border-color: rgba(76, 175, 80, 0);">
+              <img src="justinianus1.jpg" alt="" class="img-fluid" >
+            </div>
+            <div class="col" style=" background: rgba(76, 175, 80, 0); border-color: rgba(76, 175, 80, 0);">
+              <img src="justinianus2.jpg" alt="" class="img-fluid" >
+        </div>
+            </div>
+            </div>
+      
 
         <p>
             Sapanca Gölü’nün sularını Sakarya Nehri’ne boşaltan Çark Deresi (Melas Çayı) üzerinde yer alan Justinianus Köprüsü, Erken Bizans Dönemi’nin Anadolu’daki en görkemli anıtsal yapılarındandır. <br>
@@ -52,6 +64,17 @@
 
             
         </p>
+
+        <div class="container text-center">
+          <div class="row">
+            <div class="col" style=" background: rgba(76, 175, 80, 0); border-color: rgba(76, 175, 80, 0);">
+              <img src="justinianus3.jpg" alt="" class="img-fluid" >
+            </div>
+            <div class="col" style=" background: rgba(76, 175, 80, 0); border-color: rgba(76, 175, 80, 0);">
+              <img src="justinianus4.jpg" alt="" class="img-fluid" >
+        </div>
+            </div>
+            </div>
     </div>
 
 
