--- a/Web Proje/Hakkımda.html
+++ b/Web Proje/Hakkımda.html
@@ -8,9 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+   
 </head>
 <body class="p-3 m-0 border-0 bd-example m-0 border-0">
    
@@ -24,8 +22,8 @@
                   <div class="navbar-nav">
                     <a class="nav-link" href="Hakkımda.html">Hakkımda</a>
                     <a class="nav-link" href="Sehrim.html">Şehrim</a>
-                    <a class="nav-link" href="#">Özgeçmiş</a>
-                    <a class="nav-link" href="">İlgi Alanlarım</a>
+                    <a class="nav-link" href="Ozgecmis.html">Özgeçmiş</a>
+                    <a class="nav-link" href="IlgiAlanlarım.html">İlgi Alanlarım</a>
                   </div>
                 </div>
               </div>
@@ -43,20 +41,20 @@
             Şu an bu satırları yazarken<a href="https://music.youtube.com/watch?v=rZRf8yWR1tg">Sezen Aksu-Yeniler ve Yeni Kalanlar</a>  dinliyorum.
             Zaten en sevdiğim sanatçı da Sezen Aksu. Rahatlamak istediğim zamanlarda klasik müzik tercih ederim. Genellikle hazırlanmış playlistlerden dinliyorum. 
         Buraya dinlemeyi sevdiğim bir playlistin linkini bırakıyorum.<br><a href="https://music.youtube.com/playlist?list=RDCLAK5uy_n9hGvSNdO2TpX8jJuiThvnfrfIi1qNRnY">Klasik Müzik Playlisti</a></p>
-        <img src="müzik.jpg" alt="" class="img-fluid"></div>
+        <img src="img/müzik.jpg" alt="" class="img-fluid"></div>
 
             <div class="maddeler">
                 <h1>Kitap Okumak</h1>
 
                 <p>Müzikten sonra beni en çok rahatlatan aktivite kitap okumak. Özellikle hava yağmurluyken sıcak bir kahveyle okumak gibisi yok.
                  Sezen Aksu'nun <a href="https://music.youtube.com/watch?v=yN13U6Uk1LY">Gidemem</a> şarkısında dediği gibi
-                 "O zaman hemen git radyoyu aç bir şarkı tut ya da bir kitap oku mutlaka iyi geliyor."</p><img src="kitap.jpg" alt="" class="img-fluid"><br>
+                 "O zaman hemen git radyoyu aç bir şarkı tut ya da bir kitap oku mutlaka iyi geliyor."</p><img src="img/kitap.jpg" alt="" class="img-fluid"><br>
                 </div>
             <div class="maddeler">
                 <h1>Yürüyüş yapmak</h1>
                 Her gün düzenli olarak yürüyüş yapıyorum. Tabi ki kulaklıkla... Müzik burada da olmazsa olmazım. <br>
                 Bir yere gideceksem yol fazla uzun olmadığı sürece her zaman yürümeyi tercih ederim. 
-                <img src="yürüyüş.jpg" alt="" class="img-fluid">
+                <img src="img/yürüyüş.jpg" alt="" class="img-fluid">
                 </div>
             
         </div>
