--- a/Web Proje/IlgiAlanlarım.html
+++ b/Web Proje/IlgiAlanlarım.html
@@ -39,8 +39,26 @@
             <div id="imageContainer"></div>
           </div>
 
+          <div class="col">
+            <p>Hakkımda bölümünde de bahsettiğim gibi kitap okumayı çok severim. Farklı karakterler okumak, farklı hayatları keşfetmek hoşuma gidiyor.
+              Bu yüzden bir kitap arama projesi yaptım.
+            </p>
+
+              <h1>Kitap Arama</h1>
+           <form id="search-form">
+              <label for="search-input">Kitap Adı veya Yazar Adı:</label>
+               <input type="text" id="search-input" required>
+               <button type="submit">Ara</button>
+           </form>
+
+          <ul id="book-list"></ul>
+
+           <script src="kitap.js"></script>
+
           </div>
-          </div>
+
+        </div>
+    </div>
   
 
         <script src="script.js"></script>
