--- a/Web Proje/Ozgecmis.html
+++ b/Web Proje/Ozgecmis.html
@@ -52,6 +52,8 @@
         <h3>Üniversite</h3>
         <p>Sakarya Üniversite Bilgisayar Mühendisliği (2023-2027)</p>
 
+        <h2>Diller</h2>
+        <p>İngilizce</p>
       </section>
 
     </main>
