--- a/Web Proje/Mirasimiz.html
+++ b/Web Proje/Mirasimiz.html
@@ -39,10 +39,10 @@
         <div class="container text-center">
           <div class="row">
             <div class="col" style=" background: rgba(76, 175, 80, 0); border-color: rgba(76, 175, 80, 0);">
-              <img src="justinianus1.jpg" alt="" class="img-fluid" >
+              <img src="img/justinianus1.jpg" alt="" class="img-fluid" >
             </div>
             <div class="col" style=" background: rgba(76, 175, 80, 0); border-color: rgba(76, 175, 80, 0);">
-              <img src="justinianus2.jpg" alt="" class="img-fluid" >
+              <img src="img/justinianus2.jpg" alt="" class="img-fluid" >
         </div>
             </div>
             </div>
@@ -68,10 +68,10 @@
         <div class="container text-center">
           <div class="row">
             <div class="col" style=" background: rgba(76, 175, 80, 0); border-color: rgba(76, 175, 80, 0);">
-              <img src="justinianus3.jpg" alt="" class="img-fluid" >
+              <img src="img/justinianus3.jpg" alt="" class="img-fluid" >
             </div>
             <div class="col" style=" background: rgba(76, 175, 80, 0); border-color: rgba(76, 175, 80, 0);">
-              <img src="justinianus4.jpg" alt="" class="img-fluid" >
+              <img src="img/justinianus4.jpg" alt="" class="img-fluid" >
         </div>
             </div>
             </div>
