--- a/Web Proje/Giris.html
+++ b/Web Proje/Giris.html
@@ -1,20 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zeynep Azap</title>
-    <link rel="stylesheet" href="css/Ozgecmis.css">
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    
 </head>
+<body class="p-3 m-0 border-0 bd-example m-0 border-0"  style="background-color: #FFEAE3;">
 
-<body class="p-3 m-0 border-0 bd-example m-0 border-0" style="background-color: #FFEAE3;">
-   
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="Anasayfa.html">Zeynep Azap</a>
@@ -35,40 +28,20 @@
           </div>
     </nav> 
 
-    <main>
-      <header>
-        <h1>Zeynep Azap</h1>
-        <p>Bilgisayar Mühendisliği Öğrencisi</p>
-      </header>
 
-      <section>
-        <h2>Kişisel Bilgiler</h2>
-        <hr>
-        <p>Ad-Soyad: Zeynep Azap</p>
-        <p>Doğum Tarihi: 14 Şubat 2005</p>
-
-        <h2>Eğitim</h2>
-        <hr>
-        <h3>Lise</h3>
-        <p>15 Temmuz Şehitler Fen Lisesi (2019-20023)</p>
-        <h3>Üniversite</h3>
-        <p>Sakarya Üniversite Bilgisayar Mühendisliği (2023-2027)</p>
-
-        <h2>Diller</h2>
-        <p>İngilizce</p>
-
-        <h2>Programlama Dilleri</h2>
-        <ul>
-          <li>C++</li>
-          <li>C#</li>
-          <li>Html</li>
-          <li>Css</li>
-          <li>Javascript</li>
-        </ul>
-      </section>
-
-    </main>
-
-   
-
-</body>
+    <div class="container mt-5">
+        <h2>Giriş</h2>
+        <form action="Giris.php" method="POST">
+            <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">E-Posta</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" name="username" aria-describedby="emailHelp" required>
+            </div>
+            <div class="mb-3">
+                <label for="exampleInputPassword1" class="form-label">Şifre</label>
+                <input type="password" class="form-control" id="exampleInputPassword1" name="password" required>
+            </div>
+       
+            <button type="submit" class="btn btn-primary">Giriş Yap</button>
+        </form>
+    </div>
+</html>
