--- a/Web Proje/IlgiAlanlarım.html
+++ b/Web Proje/IlgiAlanlarım.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zeynep Azap</title>
-    <link rel="stylesheet" href="Sehrim.css">
+    <link rel="stylesheet" href="css/IlgiAlanlarım.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
@@ -27,7 +27,9 @@
                 <a class="nav-link" href="Sehrim.html">Şehrim</a>
                 <a class="nav-link" href="Mirasimiz.html">Mirasımız</a>
                 <a class="nav-link" href="Ozgecmis.html">Özgeçmiş</a>
-                <a class="nav-link" href="">İlgi Alanlarım</a>
+                <a class="nav-link" href="IlgiAlanlarım.html">İlgi Alanlarım</a>
+                <a class="nav-link" href="Giris.html">Giriş</a>
+                <a class="nav-link" href="Iletisim.html">İletişim</a>
               </div>
             </div>
           </div>
@@ -53,7 +55,7 @@
 
           <ul id="book-list"></ul>
 
-           <script src="kitap.js"></script>
+           <script src="js/kitap.js"></script>
 
           </div>
 
@@ -61,6 +63,6 @@
     </div>
   
 
-        <script src="script.js"></script>
+        <script src="js/nasa.js"></script>
 </body>
 </html>
