--- a/Web Proje/Mirasimiz.html
+++ b/Web Proje/Mirasimiz.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zeynep Azap</title>
-    <link rel="stylesheet" href="Mirasimiz.css">
+    <link rel="stylesheet" href="css/Mirasimiz.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
@@ -27,7 +27,9 @@
                 <a class="nav-link" href="Sehrim.html">Şehrim</a>
                 <a class="nav-link" href="Mirasimiz.html">Mirasımız</a>
                 <a class="nav-link" href="Ozgecmis.html">Özgeçmiş</a>
-                <a class="nav-link" href="">İlgi Alanlarım</a>
+                <a class="nav-link" href="IlgiAlanlarım.html">İlgi Alanlarım</a>
+                <a class="nav-link" href="Giris.html">Giriş</a>
+                <a class="nav-link" href="Iletisim.html">İletişim</a>
               </div>
             </div>
           </div>
@@ -35,7 +37,7 @@
 
     <div> 
         <h1>Tarihi Justinianus Köprüsü</h1>
-
+        <hr style=" border: 5px double black;"> 
         <div class="container text-center">
           <div class="row">
             <div class="col" style=" background: rgba(76, 175, 80, 0); border-color: rgba(76, 175, 80, 0);">
