--- a/Web Proje/IlgiAlanlarım.html
+++ b/Web Proje/IlgiAlanlarım.html
@@ -37,10 +37,17 @@
     <div class="container text-center">
         <div class="row">
           <div class="col" >
-            <h1>NASA Space Image Gallery</h1>
-            <div id="imageContainer"></div>
+            <p></p>
+            <div class="container">
+              <h1>Random Cat Images</h1>
+              <button id="fetch-cat">Get a Cat!</button>
+              <div id="cat-image-container">
+                  <img id="cat-image" src="" alt="Random Cat">
+              </div>
           </div>
-
+         
+          </div>
+          <script src="js/kedi.js"></script>
           <div class="col">
             <p>Hakkımda bölümünde de bahsettiğim gibi kitap okumayı çok severim. Farklı karakterler okumak, farklı hayatları keşfetmek hoşuma gidiyor.
               Bu yüzden bir kitap arama projesi yaptım.
@@ -63,6 +70,6 @@
     </div>
   
 
-        <script src="js/nasa.js"></script>
+       
 </body>
 </html>
