--- a/Web Proje/Giris.html
+++ b/Web Proje/Giris.html
@@ -4,8 +4,10 @@
     <title>Zeynep Azap</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+   
+
 </head>
+
 <body class="p-3 m-0 border-0 bd-example m-0 border-0"  style="background-color: #FFEAE3;">
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -31,7 +33,7 @@
 
     <div class="container mt-5">
         <h2>Giriş</h2>
-        <form action="Giris.php" method="POST">
+        <form  name="loginForm" action="Giris.php" method="POST">
             <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">E-Posta</label>
                 <input type="email" class="form-control" id="exampleInputEmail1" name="username" aria-describedby="emailHelp" required>
@@ -44,4 +46,5 @@
             <button type="submit" class="btn btn-primary">Giriş Yap</button>
         </form>
     </div>
+</body>
 </html>
