--- a/Web Proje/Ozgecmis.html
+++ b/Web Proje/Ozgecmis.html
@@ -23,11 +23,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup" >
               <div class="navbar-nav">
-                <a class="nav-link" href="Hakkımda.html">Hakkımda</a>
+                <a class="nav-link" href="Hakkimda.html">Hakkımda</a>
                 <a class="nav-link" href="Sehrim.html">Şehrim</a>
                 <a class="nav-link" href="Mirasimiz.html">Mirasımız</a>
                 <a class="nav-link" href="Ozgecmis.html">Özgeçmiş</a>
-                <a class="nav-link" href="IlgiAlanlarım.html">İlgi Alanlarım</a>
+                <a class="nav-link" href="IlgiAlanlarim.html">İlgi Alanlarım</a>
                 <a class="nav-link" href="Giris.html">Giriş</a>
                 <a class="nav-link" href="Iletisim.html">İletişim</a>
               </div>
@@ -50,21 +50,28 @@
         <h2>Eğitim</h2>
         <hr>
         <h3>Lise</h3>
-        <p>15 Temmuz Şehitler Fen Lisesi (2019-20023)</p>
+        <p>15 Temmuz Şehitler Fen Lisesi (2019-2023)</p>
         <h3>Üniversite</h3>
         <p>Sakarya Üniversite Bilgisayar Mühendisliği (2023-2027)</p>
 
         <h2>Diller</h2>
         <p>İngilizce</p>
 
-        <h2>Programlama Dilleri</h2>
+        <h2>Beceriler</h2>
+        <hr>
+        <h3>Programlama Dilleri</h3>
         <ul>
           <li>C++</li>
           <li>C#</li>
+          
+        </ul>
+        <h3>Web</h3>
+        <ul>
           <li>Html</li>
           <li>Css</li>
           <li>Javascript</li>
         </ul>
+        
       </section>
 
     </main>
