--- a/Web Proje/Giris.html
+++ b/Web Proje/Giris.html
@@ -4,7 +4,7 @@
     <title>Zeynep Azap</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-   
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </head>
 
@@ -18,11 +18,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup" >
               <div class="navbar-nav">
-                <a class="nav-link" href="Hakkımda.html">Hakkımda</a>
+                <a class="nav-link" href="Hakkimda.html">Hakkımda</a>
                 <a class="nav-link" href="Sehrim.html">Şehrim</a>
                 <a class="nav-link" href="Mirasimiz.html">Mirasımız</a>
                 <a class="nav-link" href="Ozgecmis.html">Özgeçmiş</a>
-                <a class="nav-link" href="IlgiAlanlarım.html">İlgi Alanlarım</a>
+                <a class="nav-link" href="IlgiAlanlarim.html">İlgi Alanlarım</a>
                 <a class="nav-link" href="Giris.html">Giriş</a>
                 <a class="nav-link" href="Iletisim.html">İletişim</a>
               </div>
