--- a/Web Proje/Hakkimda.html
+++ b/Web Proje/Hakkimda.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hakkımda</title>
-    <link rel="stylesheet" href="css/Hakkımda.css">
+    <link rel="stylesheet" href="css/Hakkimda.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -20,14 +20,14 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup" >
                   <div class="navbar-nav">
-                    <a class="nav-link" href="Hakkımda.html">Hakkımda</a>
+                    <a class="nav-link" href="Hakkimda.html">Hakkımda</a>
                     <a class="nav-link" href="Sehrim.html">Şehrim</a>
                     <a class="nav-link" href="Mirasimiz.html">Mirasımız</a>
                     <a class="nav-link" href="Ozgecmis.html">Özgeçmiş</a>
-                    <a class="nav-link" href="IlgiAlanlarım.html">İlgi Alanlarım</a>
+                    <a class="nav-link" href="IlgiAlanlarim.html">İlgi Alanlarım</a>
                     <a class="nav-link" href="Giris.html">Giriş</a>
                     <a class="nav-link" href="Iletisim.html">İletişim</a>
-                  </div>
+                      </div>
                 </div>
               </div>
         </nav> 
@@ -37,7 +37,7 @@
                 <h1>Müzik Dinlemek</h1>
                 
             <p>Yapmayı en sevdiğim aktivite müzik dinlemek. Aynı zamanda şarkı söylemeyi de çok severim. Yaptığım işleri genellikle müzikle yaparım.
-            Şu an bu satırları yazarken<a href="https://music.youtube.com/watch?v=rZRf8yWR1tg">Sezen Aksu-Yeniler ve Yeni Kalanlar</a>  dinliyorum.
+            Şu an bu satırları yazarken <a href="https://music.youtube.com/watch?v=rZRf8yWR1tg">Sezen Aksu-Yeniler ve Yeni Kalanlar</a>  dinliyorum.
             Zaten en sevdiğim sanatçı da Sezen Aksu. Rahatlamak istediğim zamanlarda klasik müzik tercih ederim. Genellikle hazırlanmış playlistlerden dinliyorum. 
         Buraya dinlemeyi sevdiğim bir playlistin linkini bırakıyorum.<br><a href="https://music.youtube.com/playlist?list=RDCLAK5uy_n9hGvSNdO2TpX8jJuiThvnfrfIi1qNRnY">Klasik Müzik Playlisti</a></p>
         <img src="img/müzik.jpg" alt="" class="img-fluid"></div>
