--- a/Web Proje/Iletisim.html
+++ b/Web Proje/Iletisim.html
@@ -4,64 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>İletişim Formu</title>
-    <style>
-        form {
-            max-width: 400px;
-            margin: 0 auto;
-            font-family: Arial, sans-serif;
-        }
-        label {
-            display: block;
-            margin-bottom: 5px;
-        }
-        input[type="text"],
-        input[type="email"],
-        textarea {
-            width: 100%;
-            padding: 8px;
-            margin-bottom: 10px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box;
-        }
-        p.error {
-            color: red;
-            margin-top: -10px;
-            margin-bottom: 10px;
-        }
-        button {
-            padding: 10px 20px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #45a049;
-        }
-    </style>
+    <link rel="stylesheet" href="css/Iletisim.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-<body>
+<body class="p-3 m-0 border-0 bd-example m-0 border-0" style="background-color: #FFEAE3;">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="Anasayfa.html">Zeynep Azap</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup" >
+              <div class="navbar-nav">
+                <a class="nav-link" href="Hakkimda.html">Hakkımda</a>
+                <a class="nav-link" href="Sehrim.html">Şehrim</a>
+                <a class="nav-link" href="Mirasimiz.html">Mirasımız</a>
+                <a class="nav-link" href="Ozgecmis.html">Özgeçmiş</a>
+                <a class="nav-link" href="IlgiAlanlarim.html">İlgi Alanlarım</a>
+                <a class="nav-link" href="Giris.html">Giriş</a>
+                <a class="nav-link" href="Iletisim.html">İletişim</a>
+              </div>
+            </div>
+          </div>
+    </nav> 
+
     <div id="app">
-        <form action="submit.php" method="post">
+        <form action="Iletisim.php" method="post">
             <div>
                 <label for="name">Ad Soyad:</label>
-                <input type="text" id="name" v-model="formData.name" @blur="validateName">
+                <input type="text" name="name" id="name" v-model="formData.name" @blur="validateName">
                 <p v-if="showNameWarning" style="color: red;">Ad Soyad alanı boş bırakılamaz!</p>
             </div>
             <div>
                 <label for="email">E-posta:</label>
-                <input type="email" id="email" v-model="formData.email" @blur="validateEmail">
+                <input type="email" name="email" id="email" v-model="formData.email" @blur="validateEmail">
                 <p v-if="showEmailWarning" style="color: red;">Geçerli bir e-posta adresi girin!</p>
             </div>
             <div>
                 <label for="message">Mesaj:</label>
-                <textarea id="message" v-model="formData.message" @blur="validateMessage"></textarea>
+                <textarea id="message" name="message" v-model="formData.message" @blur="validateMessage"></textarea>
                 <p v-if="showMessageWarning" style="color: red;">Mesaj alanı boş bırakılamaz!</p>
             </div>
-            <button type="button" @click="validateFormVue">Gönder (Vue)</button>
-            <button type="button" @click="validateFormJS">Gönder (JS)</button>
+            <button type="button" @click="validateFormVue">Kontrol et (Vue)</button>
+            <button type="button" @click="validateFormJS">Kontrol et (JS)</button>
             <button type="submit">Gönder (PHP)</button>
             <button type="button" @click="resetForm">Temizle</button>
 
