--- a/Web Proje/IlgiAlanlarim.html
+++ b/Web Proje/IlgiAlanlarim.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zeynep Azap</title>
-    <link rel="stylesheet" href="css/IlgiAlanlarım.css">
+    <link rel="stylesheet" href="css/IlgiAlanlarim.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
@@ -23,11 +23,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup" >
               <div class="navbar-nav">
-                <a class="nav-link" href="Hakkımda.html">Hakkımda</a>
+                <a class="nav-link" href="Hakkimda.html">Hakkımda</a>
                 <a class="nav-link" href="Sehrim.html">Şehrim</a>
                 <a class="nav-link" href="Mirasimiz.html">Mirasımız</a>
                 <a class="nav-link" href="Ozgecmis.html">Özgeçmiş</a>
-                <a class="nav-link" href="IlgiAlanlarım.html">İlgi Alanlarım</a>
+                <a class="nav-link" href="IlgiAlanlarim.html">İlgi Alanlarım</a>
                 <a class="nav-link" href="Giris.html">Giriş</a>
                 <a class="nav-link" href="Iletisim.html">İletişim</a>
               </div>
@@ -37,7 +37,13 @@
     <div class="container text-center">
         <div class="row">
           <div class="col" >
-            <p></p>
+            <p>Kedileri sevmek, hayatımıza neşe ve huzur getiren özel bir duygudur.
+              Onların sıcak ve yumuşak tüylerine dokunmak, insanı anında rahatlatır. 
+              Kedilere duyulan sevgi, karşılıklı bir güven ve bağlılık ilişkisine dönüşür.
+              Kısacası, kedileri sevmek, hem ruhsal hem de fiziksel sağlığımıza olumlu katkılarda bulunan, yaşamı daha anlamlı kılan bir deneyimdir. <br>
+              Aşağıdaki butona her bastığınızda başka bir sevimli kedi karşınıza gelecek.
+              
+            </p>
             <div class="container">
               <h1>Random Cat Images</h1>
               <button id="fetch-cat">Get a Cat!</button>
@@ -49,10 +55,13 @@
           </div>
           <script src="js/kedi.js"></script>
           <div class="col">
-            <p>Hakkımda bölümünde de bahsettiğim gibi kitap okumayı çok severim. Farklı karakterler okumak, farklı hayatları keşfetmek hoşuma gidiyor.
-              Bu yüzden bir kitap arama projesi yaptım.
+            <p>Hakkımda bölümünde de bahsettiğim gibi kitap okumayı çok severim. Kitap okumak, sadece eğlenceli bir aktivite değil, aynı zamanda sürekli bir öğrenme ve keşif sürecidir.
+               Okudukça büyür, düşünce dünyamız genişler ve bakış açılarımızı zenginleştiririz.
+               Kitaplarla dost olmak, hayat boyu süren bir yolculuktur ve her sayfa döndüğümüzde, yeni bir dünyanın kapılarını aralarız.
+              Bu yüzden aradığımız kitapları listeleyen bir proje yaptım.
             </p>
 
+            <div class="container">
               <h1>Kitap Arama</h1>
            <form id="search-form">
               <label for="search-input">Kitap Adı veya Yazar Adı:</label>
@@ -61,7 +70,7 @@
            </form>
 
           <ul id="book-list"></ul>
-
+        </div>
            <script src="js/kitap.js"></script>
 
           </div>
