--- a/Web Proje/Anasayfa.html
+++ b/Web Proje/Anasayfa.html
@@ -60,9 +60,9 @@
                 <h1>Müzik Dinlemek</h1>
              
             <p>Yapmayı en sevdiğim aktivite müzik dinlemek. Aynı zamanda şarkı söylemeyi de çok severim. Yaptığım işleri genellikle müzikle yaparım.
-            Şu an bu satırları yazarken <a href="https://music.youtube.com/watch?v=rZRf8yWR1tg">Sezen Aksu-Yeniler ve Yeni Kalanlar</a>  dinliyorum.
+            Şu an bu satırları yazarken <a href="https://music.youtube.com/watch?v=rZRf8yWR1tg" target="_blank">Sezen Aksu-Yeniler ve Yeni Kalanlar</a>  dinliyorum.
             Zaten en sevdiğim sanatçı da Sezen Aksu. Rahatlamak istediğim zamanlarda klasik müzik tercih ederim. Genellikle hazırlanmış playlistlerden dinliyorum. 
-        Buraya dinlemeyi sevdiğim bir playlistin linkini bırakıyorum.<br><a href="https://music.youtube.com/playlist?list=RDCLAK5uy_n9hGvSNdO2TpX8jJuiThvnfrfIi1qNRnY">Klasik Müzik Playlisti</a></p>
+        Buraya dinlemeyi sevdiğim bir playlistin linkini bırakıyorum.<br><a href="https://music.youtube.com/playlist?list=RDCLAK5uy_n9hGvSNdO2TpX8jJuiThvnfrfIi1qNRnY" target="_blank">Klasik Müzik Playlisti</a></p>
         <img src="img/müzik.jpg" alt="" class="img-fluid"></div>
 
             <div class="maddeler">
@@ -70,7 +70,7 @@
              
 
                 <p>Müzikten sonra beni en çok rahatlatan aktivite kitap okumak. Özellikle hava yağmurluyken sıcak bir kahveyle okumak gibisi yok.
-                 Sezen Aksu'nun <a href="https://music.youtube.com/watch?v=yN13U6Uk1LY">Gidemem</a> şarkısında dediği gibi
+                 Sezen Aksu'nun <a href="https://music.youtube.com/watch?v=yN13U6Uk1LY" target="_blank">Gidemem</a> şarkısında dediği gibi
                  "O zaman hemen git radyoyu aç bir şarkı tut ya da bir kitap oku mutlaka iyi geliyor."</p><img src="img/kitap.jpg" alt="" class="img-fluid"><br>
                 </div>
             <div class="maddeler">
